--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -29,9 +29,17 @@
         </form>
     </div>
 
-    Model:
-    <pre>{{model | json}}</pre>
 
+    <div class="row">
+        <div class="col-md-6">
+            Model:
+            <pre>{{model | json}}</pre>
+        </div>
+        <div class="col-md-6">
+            Model (filtered):
+            <pre>{{model | json}}</pre>
+        </div>
+    </div>
 
 </div>
 </body>
