--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="../../formarble.js"></script>
+    <script src="../../formarble.controls.js"></script>
     <script src="schema.js"></script>
     <script src="app.js"></script>
 </head>
@@ -16,7 +17,7 @@
     <h1>Profile example</h1>
 
     <div>
-        <form class="form-horizontal" fm-form="profile" fm-theme="bs" ng-model="model">
+        <form class="form-horizontal" fm-form="profile" ng-model="model">
             <div fm-control="$control"></div>
         </form>
     </div>
@@ -24,7 +25,7 @@
     <h1>Separate image part</h1>
 
     <div>
-        <form class="form-horizontal" fm-form="image" fm-theme="bs" ng-model="model">
+        <form class="form-horizontal" fm-form="image" ng-model="model">
             <div fm-control="$control"></div>
         </form>
     </div>
