--- a/examples/test/index.html
+++ b/examples/test/index.html
@@ -47,7 +47,7 @@
 
 <script id="bs/tree" type="text/ng-template">
     <h3 class="text-muted" ng-if="::!$isSubtree">
-        <a href ng-click="$tree.select()">{{::$control.title}}</a>
+        <a href ng-click="$tree.select()">{{$control.title}}</a>
     </h3>
     <div class="row">
         <div class="col-lg-3" ng-if="::!$isSubtree">
@@ -74,14 +74,14 @@
 </script>
 <script id="bs/group" type="text/ng-template">
     <div>
-        <p class="text-muted" ng-style="{'padding-left':$control.level*20}">{{::$control.title}}</p>
+        <p class="text-muted" ng-style="{'padding-left':$control.level*20}">{{$control.title}}</p>
 
         <div ng-repeat="c in ::$subControls" fm-control="c"></div>
     </div>
 </script>
 <script id="bs/control-label" type="text/ng-template">
-    {{:: $control.title}}
-    <a class="control-help" ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
+    {{ $control.title}}
+    <a class="control-help" ng-if="::$control.display.hint" title="{{$control.display.hint}}">
         <i class="glyphicon glyphicon-info-sign"></i>
     </a>
 </script>
@@ -93,8 +93,8 @@
             <input class="form-control" fm-control-input/>
 
             <p ng-if="::$control.description" class="help-block">
-                {{:: $control.description}}
-                <a ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
+                {{ $control.description}}
+                <a ng-if="::$control.display.hint" title="{{$control.display.hint}}">
                     <i class="glyphicon glyphicon-info-sign"></i>
                 </a>
             </p>
@@ -113,8 +113,8 @@
             </div>
 
             <p ng-if="::$control.description" class="help-block">
-                {{:: $control.description}}
-                <a ng-if="::$control.display.hint" title="{{::$control.display.hint}}">
+                {{ $control.description}}
+                <a ng-if="::$control.display.hint" title="{{$control.display.hint}}">
                     <i class="glyphicon glyphicon-info-sign"></i>
                 </a>
             </p>
@@ -128,7 +128,7 @@
         <div class="col-sm-8">
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" fm-control-input> {{:: $control.description}}
+                    <input type="checkbox" fm-control-input> {{ $control.description}}
                 </label>
             </div>
         </div>
@@ -141,7 +141,7 @@
         <div class="col-sm-8">
             <div class="radio" ng-repeat="li in $control.display.options">
                 <label>
-                    <input type="radio" fm-control-input ng-value="li.id"/> {{:: li.title}}
+                    <input type="radio" fm-control-input ng-value="li.id"/> {{ li.title}}
                 </label>
             </div>
         </div>
