--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -35,7 +35,7 @@
     <h1>Profile example</h1>
 
     <div>
-        <form class="form-horizontal" fm-form="schema" fm-theme="bs" ng-model="model">
+        <form class="form-horizontal" fm-form="schema" fm-theme="bs" fm-model="model">
             <div fm-control="$control"></div>
         </form>
     </div>
