--- a/examples/profile/index.html
+++ b/examples/profile/index.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Formarble example</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <script src="bower_components/lodash/dist/lodash.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="../../formarble.js"></script>
-    <script src="../../controls/tree/tree.all.js"></script>
-    <script src="../../controls/simple/simple.all.js"></script>
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <script src="../bower_components/lodash/dist/lodash.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../../build/formarble.js"></script>
+    <script src="../../build/tree/tree.js"></script>
+    <script src="../../build/simple/simple.js"></script>
     <script src="schema.js"></script>
     <script src="app.js"></script>
 
