Remov contact form bs4 example

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Examples:</p>
 
         <ol>
-            <li><a href="examples/contact-form">Simple contact form</a> (<a href="examples/contact-form/bs4.html">Bootstrap 4</a>)</li>
+            <li><a href="examples/contact-form">Simple contact form</a></li>
             <li><a href="examples/profile">Profile setting</a> (<a href="examples/profile/bs4.html">Bootstrap 4</a>)
                 <ul>
                     <li>Predefined model</li>
