Added templates for bs4 common

--- a/examples/contact-form-bs4/index.html
+++ b/examples/contact-form-bs4/index.html
@@ -24,7 +24,7 @@
                 <div class="form-group row">
                     <h2 class="col-md-push-4 col-md-8">{{schema.title}}</h2>
                 </div>
-                <div fm-form="schema" fm-theme="bs-4" fm-model="model"></div>
+                <div fm-form="schema" fm-theme="bs4-common" fm-model="model"></div>
                 <div class="form-group row">
                     <div class="col-sm-push-4 col-sm-8">
                         <button class="btn btn-primary" ng-click="send()" ng-disabled="form.$invalid">Send</button>
