Update core lib

--- a/examples/profile/bs4.html
+++ b/examples/profile/bs4.html
@@ -37,7 +37,7 @@
     </header>
 
     <section>
-        <form class="form-horizontal" fm-form="schema" fm-theme="bs-4" fm-model="model">
+        <form fm-form="schema" fm-theme="bs4" fm-model="model">
             <!--<div fm-control="$control"></div>-->
         </form>
     </section>
