--- a/examples/contact-form/bs4.html
+++ b/examples/contact-form/bs4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Formarble example</title>
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../bower_components/bootstrap4/dist/css/bootstrap.css"/>
     <script src="../bower_components/lodash/dist/lodash.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/formarble/build/formarble.js"></script>
@@ -18,12 +18,12 @@
 
     <section>
         <div>
-            <form name="form" class="form-horizontal" novalidate>
-                <div class="form-group">
+            <form name="form" novalidate>
+                <div class="row">
                     <h2 class="col-md-push-4 col-md-8">{{schema.title}}</h2>
                 </div>
-                <div fm-form="schema" fm-theme="bs-common" fm-model="model"></div>
-                <div class="form-group">
+                <div fm-form="schema" fm-theme="bs4-common" fm-model="model"></div>
+                <div class="row">
                     <div class="col-sm-push-4 col-sm-8">
                         <button class="btn btn-primary" ng-click="send()" ng-disabled="form.$invalid">Send</button>
                     </div>
