--- a/examples/profile-bs4/index.html
+++ b/examples/profile-bs4/index.html
@@ -2,10 +2,11 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Formarble example</title>
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" href="../bower_components/bootstrap4/dist/css/bootstrap.css"/>
     <script src="../bower_components/lodash/dist/lodash.js"></script>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/bootstrap4/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../../build/formarble.js"></script>
     <script src="../../build/tree/tree.js"></script>
@@ -14,13 +15,13 @@
     <script src="app.js"></script>
 
     <style>
-        .nav-tabs li > a {
+/*        .nav-tabs li > a {
             max-width: 200px;
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
         }
-
+*/
         [fm-tree-sidebar] > li.selected > a {
             font-weight: bold;
         }
